<?xml version="1.0"?>
<package format="3">
  <name>cmd_gate</name>
  <version>0.1.0</version>
  <description>Traffic-light gate node that blocks or zeros /cmd/* until /green is received.</description>

  <maintainer email="dev@example.com">cmd_gate_maintainer</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

