<?xml version="1.0"?>
<package format="3">
  <name>cone_labeling</name>
  <version>0.0.0</version>
  <description>Cone clustering, Delaunay 연결, B‑spline interpolation</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv2</depend>
  <depend>custom_interface</depend>

  <!-- launch 파일 실행을 위한 런타임 의존성 추가 -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

