<?xml version="1.0"?>
<package format="3">
  <name>cone_labeling_k</name>
  <version>0.1.0</version>
  <description>Potential Field based cone labeling</description>

  <maintainer email="tykim0721@naver.com">Taeyoon Kim</maintainer>
  <license>KU</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>


  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

