<?xml version="1.0"?>
<package format="3">
  <name>cone_labeling_yb</name>
  <version>0.0.0</version>
  <description>Cone clustering, Delaunay, B-spline path generation, speed planning, and pure pursuit tracking</description>
  <maintainer email="you@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>
  <depend>custom_interface</depend>
  <depend>libeigen3-dev</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
