<?xml version="1.0"?>
<package format="3">
  <name>gps_global_planner</name>
  <version>0.0.1</version>
  <description>Global-path &amp; cone utilities (GPS→local, TF, ROI cones etc.).</description>

  <!-- 유지보수자와 라이선스는 프로젝트에 맞게 수정 -->
  <maintainer email="imhyeonwoo21@gmail.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <!-- build tool -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 빌드 시 필요한 라이브러리 -->
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>custom_interface</build_depend>

  <!-- 실행 시 필요한 라이브러리 -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>custom_interface</exec_depend>

  <!-- 파이썬 추가 의존 -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-pandas</exec_depend>
  <exec_depend>python3-matplotlib</exec_depend>
  <exec_depend>python3-ament-index</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
