<?xml version="1.0"?>
<package format="3">
  <name>pure_pursuit</name>
  <version>0.1.0</version>
  <description>Pure Pursuit controller (static look-ahead) publishing /cmd/steer and mint lookahead marker.</description>

  <maintainer email="imhyeonwoo21@gmail.com">imhyeonwoo</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- C++/msgs 의존성 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>visualization_msgs</depend>

  <!-- launch에 필요한 실행 의존성 -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>ament_index_python</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
