<?xml version="1.0"?>
<package format="3">
  <name>reference_path_classifier</name>
  <version>0.0.1</version>
  <description>
    Classifies detected cones as left/right of the reference global path
    and publishes them as RViz markers (left: green, right: red).
  </description>

  <!-- One line licence identifier (e.g. Apache-2.0, MIT, BSD-3-Clause) -->
  <license>Apache-2.0</license>

  <!-- Maintainer: 이름·이메일을 꼭 수정하세요 -->
  <maintainer email="your_email@example.com">Your Name</maintainer>

  <!-- 빌드 도구 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 빌드 시 필요 (C++ 노드 추가 대비 포함) -->
  <build_depend>rclpy</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>builtin_interfaces</build_depend>
  <build_depend>custom_interface</build_depend>

  <!-- 실행 시 필요 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>custom_interface</exec_depend>

  <!-- 선택: 테스트·품질 검사 패키지 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Python entry-points를 자동 설치하려면 필요 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
