<?xml version="1.0"?>
<package format="3">
  <name>reference_path_classifier</name>
  <version>0.0.1</version>
  <description>
    Classifies detected cones as left/right of the reference global path
    and publishes them as RViz markers (left: blue, right: yellow).
  </description>

  <maintainer email="imhyeonwoo21@gmail.com">ihw</maintainer>
  <license>Apache-2.0</license>

  <!-- 빌드 도구 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 빌드 시 필요한 의존성 -->
  <build_depend>rclcpp</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>custom_interface</build_depend>
  <build_depend>eigen3_cmake_module</build_depend>
  <build_depend>Eigen3</build_depend>

  <!-- 실행 시 필요한 의존성 -->
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>custom_interface</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>


  <!-- 테스트 옵션 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- 빌드 타입 -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
